# guts

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  Scarb.toml  deny.toml  justfile
.claude/: settings.json
.claude/commands/: build.md  check.md  test.md
.github/: dependabot.yml
.github/workflows/: ci.yml  devnet-e2e-extensive.yml  docs.yml  performance.yml  release.yml  security.yml  web.yml
crates/guts-api/: Cargo.toml
crates/guts-api/src/: error.rs  handlers.rs  lib.rs  router.rs  types.rs
crates/guts-auth/: Cargo.toml
crates/guts-auth/src/: branch_protection.rs  collaborator.rs  error.rs  lib.rs  organization.rs  permission.rs  store.rs  team.rs  webhook.rs
crates/guts-ci/: Cargo.toml
crates/guts-ci/src/: artifact.rs  error.rs  executor.rs  job.rs  lib.rs  run.rs  status.rs  step.rs  store.rs  trigger.rs  workflow.rs
crates/guts-cli/: Cargo.toml
crates/guts-cli/src/: commands.rs  main.rs
crates/guts-collaboration/: Cargo.toml
crates/guts-collaboration/src/: comment.rs  error.rs  issue.rs  label.rs  lib.rs  pull_request.rs  review.rs  store.rs
crates/guts-compat/: Cargo.toml
crates/guts-compat/src/: archive.rs  contents.rs  error.rs  lib.rs  middleware.rs  pagination.rs  rate_limit.rs  release.rs  ssh_key.rs  store.rs  token.rs  user.rs
crates/guts-consensus/: Cargo.toml
crates/guts-consensus/examples/: generate_genesis.rs
crates/guts-consensus/src/: block.rs  engine.rs  error.rs  genesis.rs  lib.rs  mempool.rs  message.rs  proposal.rs  transaction.rs  validator.rs
crates/guts-consensus/src/simplex/: application.rs  block.rs  engine.rs  mod.rs  types.rs
crates/guts-core/: Cargo.toml
crates/guts-core/src/: error.rs  id.rs  lib.rs  repository.rs  timestamp.rs  traits.rs
crates/guts-desktop/: Cargo.toml  Dioxus.toml
crates/guts-desktop/assets/: styles.css
crates/guts-desktop/src/: config.rs  main.rs  router.rs
crates/guts-desktop/src/api/: client.rs  error.rs  mod.rs  types.rs
crates/guts-desktop/src/auth/: credentials.rs  identity.rs  mod.rs
crates/guts-desktop/src/components/: header.rs  layout.rs  mod.rs  sidebar.rs
crates/guts-desktop/src/state/: app_state.rs  mod.rs
crates/guts-desktop/src/views/: create_repo.rs  home.rs  login.rs  mod.rs  repository.rs  repository_blob.rs  repository_tree.rs  settings.rs
crates/guts-git/: Cargo.toml
crates/guts-git/src/: error.rs  lib.rs  pack.rs  pktline.rs  protocol.rs
crates/guts-identity/: Cargo.toml
crates/guts-identity/src/: error.rs  keypair.rs  lib.rs  public_key.rs  signature.rs
crates/guts-migrate/: Cargo.toml
crates/guts-migrate/src/: bitbucket.rs  client.rs  error.rs  github.rs  gitlab.rs  lib.rs  progress.rs  types.rs  verify.rs
crates/guts-node/: Cargo.toml
crates/guts-node/src/: api.rs  auth_api.rs  ci_api.rs  collaboration_api.rs  compat_api.rs  config.rs  consensus_api.rs  consensus_app.rs  consensus_simplex.rs  lib.rs  main.rs  operator.rs  p2p.rs  realtime_api.rs
crates/guts-node/src/health/: mod.rs
crates/guts-node/src/observability/: logging.rs  metrics.rs  middleware.rs  mod.rs
crates/guts-node/src/performance/: cache_headers.rs  coalescing.rs  mod.rs  pool.rs
crates/guts-node/src/resilience/: mod.rs
crates/guts-node/src/validation/: mod.rs
crates/guts-node/tests/: auth_e2e.rs  chaos_tests.rs  collaboration_e2e.rs  consensus_e2e.rs  failure_injection_tests.rs  multi_node_replication.rs  quality_tests.rs
crates/guts-p2p/: Cargo.toml
crates/guts-p2p/src/: collaboration_message.rs  error.rs  lib.rs  message.rs  node.rs  peer.rs  protocol.rs
crates/guts-protocol/: Cargo.toml
crates/guts-protocol/src/: error.rs  lib.rs  messages.rs  version.rs
crates/guts-realtime/: Cargo.toml
crates/guts-realtime/src/: client.rs  error.rs  event.rs  hub.rs  lib.rs  notification.rs  subscription.rs
crates/guts-repo/: Cargo.toml
crates/guts-repo/src/: error.rs  lib.rs  repository.rs
crates/guts-security/: Cargo.toml
crates/guts-security/src/: audit.rs  error.rs  hsm.rs  lib.rs  rate_limit.rs  rotation.rs  secrets.rs
crates/guts-storage/: Cargo.toml
crates/guts-storage/benches/: concurrent_bench.rs  storage_bench.rs
crates/guts-storage/src/: backend.rs  cache.rs  compression.rs  error.rs  hash.rs  hybrid.rs  lib.rs  object.rs  pool.rs  refs.rs  rocksdb.rs  store.rs  traits.rs
crates/guts-storage/tests/: e2e_collaboration.rs
crates/guts-types/: Cargo.toml
crates/guts-types/src/: identity.rs  lib.rs  repository.rs
crates/guts-web/: Cargo.toml
crates/guts-web/src/: error.rs  lib.rs  markdown.rs  routes.rs  templates.rs
crates/guts-web/templates/: base.html  explore.html  index.html  search.html
crates/guts-web/templates/actions/: list.html  run.html
crates/guts-web/templates/api/: docs.html
crates/guts-web/templates/consensus/: dashboard.html
crates/guts-web/templates/issue/: list.html  view.html
crates/guts-web/templates/org/: list.html  team.html  teams.html  view.html
crates/guts-web/templates/pr/: list.html  view.html
crates/guts-web/templates/repo/: blob.html  commit.html  commits.html  tree.html  view.html
crates/guts-web/templates/user/: profile.html
docs/: MILESTONE-10.md  MILESTONE-11.md  MILESTONE-12.md  MILESTONE-13.md  MILESTONE-14.md  MILESTONE-3.md  MILESTONE-4.md  MILESTONE-5.md  MILESTONE-6.md  MILESTONE-7.md  MILESTONE-8.md  MILESTONE-9.md  PRD.md  ROADMAP.md
docs-site/: README.md  index.md  package-lock.json  package.json
docs-site/.vitepress/: config.ts
docs-site/developer/: index.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_audit_event.rs  fuzz_git_protocol.rs  fuzz_object_data.rs  fuzz_p2p_message.rs  fuzz_pack_parser.rs  fuzz_pktline.rs  fuzz_rate_limit.rs  fuzz_repo_announce.rs  fuzz_secret_string.rs  fuzz_username_validation.rs
guts-cli/: README.md  bun.lockb  index.ts  package.json
infra/: README.md
scripts/: deploy_guts.sh  verify.sh
src/: contracts.cairo  lib.cairo  tests.cairo
tools/git-credential-guts/: Cargo.toml  README.md
tools/git-credential-guts/src/: main.rs
web/: next.config.ts  package-lock.json  package.json
(+155 files in other folders)
