[workspace]
members = [
    "crates/guts-types",
    "crates/guts-storage",
    "crates/guts-git",
    "crates/guts-p2p",
    "crates/guts-collaboration",
    "crates/guts-auth",
    "crates/guts-web",
    "crates/guts-realtime",
    "crates/guts-ci",
    "crates/guts-compat",
    "crates/guts-node",
    "crates/guts-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AbdelStark/guts"
homepage = "https://github.com/AbdelStark/guts"
authors = ["Guts Contributors"]

[workspace.dependencies]
# Internal crates
guts-types = { version = "0.1.0", path = "crates/guts-types" }
guts-storage = { version = "0.1.0", path = "crates/guts-storage" }
guts-git = { version = "0.1.0", path = "crates/guts-git" }
guts-p2p = { version = "0.1.0", path = "crates/guts-p2p" }
guts-collaboration = { version = "0.1.0", path = "crates/guts-collaboration" }
guts-auth = { version = "0.1.0", path = "crates/guts-auth" }
guts-web = { version = "0.1.0", path = "crates/guts-web" }
guts-realtime = { version = "0.1.0", path = "crates/guts-realtime" }
guts-ci = { version = "0.1.0", path = "crates/guts-ci" }
guts-compat = { version = "0.1.0", path = "crates/guts-compat" }

# Commonware dependencies (matching Alto's versions)
commonware-broadcast = "0.0.63"
commonware-codec = "0.0.63"
commonware-consensus = "0.0.63"
commonware-cryptography = "0.0.63"
commonware-deployer = { version = "0.0.63", default-features = false }
commonware-macros = "0.0.63"
commonware-p2p = "0.0.63"
commonware-resolver = "0.0.63"
commonware-runtime = "0.0.63"
commonware-storage = "0.0.63"
commonware-stream = "0.0.63"
commonware-utils = "0.0.63"

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
prost = "0.13.5"
prost-build = "0.13.5"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# Async
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"

# Logging & Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Utilities
bytes = "1.7.1"
rand = "0.8.5"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.15", features = ["v4"] }
governor = "0.6.3"
prometheus-client = "0.22.3"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1.0"
parking_lot = "0.12"

# Web/HTML
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
pulldown-cmark = "0.12"
mime_guess = "2.0"

# Testing
proptest = "1.5"
tempfile = "3.14"

# Authentication & Compatibility
argon2 = "0.5"
base64 = "0.22"
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[profile.bench]
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true
