[workspace]
members = [
    "crates/guts-types",
    "crates/guts-storage",
    "crates/guts-git",
    "crates/guts-p2p",
    "crates/guts-collaboration",
    "crates/guts-auth",
    "crates/guts-web",
    "crates/guts-realtime",
    "crates/guts-ci",
    "crates/guts-compat",
    "crates/guts-consensus",
    "crates/guts-migrate",
    "crates/guts-node",
    "crates/guts-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AbdelStark/guts"
homepage = "https://github.com/AbdelStark/guts"
authors = ["Guts Contributors"]

[workspace.dependencies]
# Internal crates
guts-types = { version = "0.1.0", path = "crates/guts-types" }
guts-storage = { version = "0.1.0", path = "crates/guts-storage" }
guts-git = { version = "0.1.0", path = "crates/guts-git" }
guts-p2p = { version = "0.1.0", path = "crates/guts-p2p" }
guts-collaboration = { version = "0.1.0", path = "crates/guts-collaboration" }
guts-auth = { version = "0.1.0", path = "crates/guts-auth" }
guts-web = { version = "0.1.0", path = "crates/guts-web" }
guts-realtime = { version = "0.1.0", path = "crates/guts-realtime" }
guts-ci = { version = "0.1.0", path = "crates/guts-ci" }
guts-compat = { version = "0.1.0", path = "crates/guts-compat" }
guts-consensus = { version = "0.1.0", path = "crates/guts-consensus" }
guts-migrate = { version = "0.1.0", path = "crates/guts-migrate" }

# Commonware dependencies (matching Alto's versions)
# Note: Keeping at 0.0.63 as 0.0.64 has significant API changes requiring migration
commonware-broadcast = "2026.2.0"
commonware-codec = "2026.2.0"
commonware-consensus = "2026.2.0"
commonware-cryptography = "2026.2.0"
commonware-deployer = { version = "2026.2.0", default-features = false }
commonware-macros = "2026.2.0"
commonware-p2p = "2026.2.0"
commonware-resolver = "2026.2.0"
commonware-runtime = "2026.2.0"
commonware-storage = "2026.2.0"
commonware-stream = "2026.2.0"
commonware-utils = "2026.2.0"

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
prost = "0.13.5"
prost-build = "0.13.5"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0"

# Async
futures = "0.3.32"
futures-util = "0.3.31"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"

# Logging & Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Cryptography
ed25519-consensus = "2.1"

# Utilities
bytes = "1.11.1"
rand = "0.9.2"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.21", features = ["v4"] }
governor = "0.10.4"
prometheus-client = "0.24.0"
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
flate2 = "1.1"
parking_lot = "0.12"

# Web/HTML
askama = "0.15"
pulldown-cmark = "0.13"
mime_guess = "2.0"

# Testing & Benchmarking
proptest = "1.10"
tempfile = "3.26"
criterion = { version = "0.8", features = ["html_reports"] }

# Storage (RocksDB)
rocksdb = { version = "0.24", default-features = false, features = ["lz4"] }
lru = "0.16"
smallvec = { version = "1.13", features = ["serde"] }

# Authentication & Compatibility
argon2 = "0.5"
base64 = "0.22"
tar = "0.4"
zip = { version = "8.1", default-features = false, features = ["deflate"] }

# Validation & Configuration
validator = { version = "0.20", features = ["derive"] }
config = "0.15"
once_cell = "1.19"
regex = "1.12"

[profile.bench]
overflow-checks = true

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true

[profile.test]
overflow-checks = true
