[package]
name = "guts-collaboration"
description = "Collaboration features for Guts: Pull Requests, Issues, Comments, Reviews"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
guts-types.workspace = true
guts-storage.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true

[dev-dependencies]
proptest.workspace = true
