[package]
name = "guts-node"
description = "Guts full node binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "guts-node"
path = "src/main.rs"

[dependencies]
guts-core = { workspace = true }
guts-identity = { workspace = true }
guts-storage = { workspace = true }
guts-repo = { workspace = true }
guts-protocol = { workspace = true }
guts-consensus = { workspace = true }
guts-p2p = { workspace = true }
guts-api = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
