[package]
name = "guts-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A decentralized code collaboration node built with the Commonware Library."
repository.workspace = true
homepage.workspace = true

[dependencies]
guts-types = { workspace = true }
guts-storage = { workspace = true }
guts-git = { workspace = true }

# Commonware
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-deployer = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-resolver = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-stream = { workspace = true }
commonware-utils = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }

# Utilities
bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
governor = { workspace = true }
prometheus-client = { workspace = true }
clap = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
parking_lot = { workspace = true }

[[bin]]
name = "guts-node"
path = "src/main.rs"
