[package]
name = "guts-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "P2P networking layer for Guts decentralized code collaboration"

[dependencies]
guts-storage = { workspace = true }

# Commonware dependencies
commonware-cryptography = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }

# Serialization
serde = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
parking_lot = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
