[package]
name = "guts-realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time WebSocket support for Guts code collaboration platform."
repository.workspace = true
homepage.workspace = true

[dependencies]
guts-auth = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
futures = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
