[package]
name = "guts-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Security utilities, audit logging, and key management for Guts"
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
guts-types.workspace = true

# Cryptography
commonware-cryptography.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true

# Utilities
parking_lot.workspace = true
uuid.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
