[package]
name = "guts-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Git object storage for Guts - content-addressed storage for blobs, trees, and commits."
repository.workspace = true
homepage.workspace = true

[features]
default = ["memory"]
memory = []
rocksdb-backend = ["rocksdb"]
full = ["memory", "rocksdb-backend"]

[dependencies]
guts-types = { workspace = true }

# Hashing
sha1 = { workspace = true }

# Compression
flate2 = { workspace = true }

# Serialization
serde = { workspace = true }

# Utilities
bytes = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Optional: Persistent storage
rocksdb = { workspace = true, optional = true }

# Caching
lru = { workspace = true }

# Memory optimization
smallvec = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
guts-git = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "concurrent_bench"
harness = false
