[package]
name = "guts-web"
description = "Web gateway for Guts: browser-based repository access"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
guts-types.workspace = true
guts-storage.workspace = true
guts-collaboration.workspace = true
guts-auth.workspace = true
guts-ci.workspace = true

axum.workspace = true
askama.workspace = true
askama_axum.workspace = true
pulldown-cmark.workspace = true
mime_guess.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
