[package]
name = "git-credential-guts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Git credential helper for Guts authentication"
repository = "https://github.com/AbdelStark/guts"
authors = ["Guts Contributors"]

[[bin]]
name = "git-credential-guts"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Keyring for secure credential storage
keyring = "3"

# Config file
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# HTTP client for token validation
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"
